default/thelounge/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: thelounge
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: thelounge
  template:
    metadata:
      labels:
        app: thelounge
    spec:
      volumes:
      - name: thelounge
        iscsi:
          iqn: iqn.2014-09.com.radoncanyon:nas1:thelounge
          targetPortal: 192.168.220.149
          lun: 1
          fsType: ext4
      - name: config
        configMap:
          name:
            thelounge
      containers:
      - name: thelounge
        image: thelounge/thelounge:3.0.0-pre.7-alpine
        volumeMounts:
        - name: thelounge
          subPath: data
          mountPath: /var/opt/thelounge
        - name: config
          mountPath: /var/opt/thelounge/config.js
          subPath: config.js
        ports:
        - containerPort: 9000
          name: thelounge
