default/thelounge/sts.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: thelounge
  namespace: default
spec:
  serviceName: thelounge
  replicas: 1
  selector:
    matchLabels:
      app: thelounge
  template:
    metadata:
      labels:
        app: thelounge
    spec:
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      volumes:
      - name: thelounge
        iscsi:
          iqn: iqn.2014-09.com.radoncanyon:nas1:thelounge
          targetPortal: 192.168.222.149
          lun: 1
          fsType: ext4
      - name: config
        configMap:
          name:
            thelounge
      containers:
      - name: thelounge
        image: docker.io/thelounge/thelounge:4.3.1
        volumeMounts:
        - name: thelounge
          subPath: data
          mountPath: /var/opt/thelounge
        - name: config
          mountPath: /var/opt/thelounge/config.js
          subPath: config.js
        ports:
        - containerPort: 9000
          name: thelounge
