default/thelounge/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: thelounge
  namespace: default
spec:
  selector:
    app: thelounge
  type: LoadBalancer
  externalIPs:
   - 192.168.222.243
  ports:
  - name: thelounge
    port: 9000
    targetPort: 9000
  - name: identd
    port: 113
    targetPort: 113
