default/thelounge/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: thelounge
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - p.desertbluffs.com
  rules:
  - host: p.desertbluffs.com
    http:
      paths:
      - backend:
          serviceName: thelounge
          servicePort: thelounge
