default/thelounge/00networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: thelounge
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: thelounge
  ingress:
  - ports:
    - port: 9000
    from:
    - namespaceSelector:
        matchLabels:
          name: ingress-nginx
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: thelounge-identd
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: thelounge
  ingress:
  - ports:
    - port: 113
    from: []
